# json2pyi

./: Cargo.toml
.github/workflows/: nightly.yml
src/: lib.rs  main.rs  tests.rs
src/inferrer/: json_schema.rs  mod.rs  optimizer.rs
src/schema/: arena.rs  mod.rs
