[package]
authors = ["Hung-I Wang <whygowe@gmail.com>", "PWall <git@pwall.me>"]
edition = "2018"
name = "json2pyi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11"
bimap = "0.6.3"
disjoint-sets = "0.4"
generational-arena = "0.2"
indexmap = "1.6"
iso8601 = "0.5"
itertools = "0.10"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde-json-schema = { git = "https://github.com/FlowerAce/serde-json-schema.git", rev = "36fc0d17ccda32613cc5c8ccdd2eee4e645ffdca" }
thiserror = "1.0.49"
anyhow = "1.0.75"
typetag = "0.2"
uuid = "1.2"
